variant: fix table contrast issue #998

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -993,6 +993,7 @@ div.highlight > div table {
   margin: 0;
 }
 table {
+  color: var(--INTERNAL-MAIN-TEXT-color);
   position: relative;
 }
 tr:has(th) {
